реализовал логин и регистрацию

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,6 +5,8 @@
     <title>MainPage</title>
 </head>
 <body>
-
+<a href="/registration">
+    <button type="button">Registration</button>
+</a>
 </body>
 </html>
