--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,28 +5,28 @@
     <title>MainPage</title>
 </head>
 <body>
-<a href="">
+<a href="/">
     <button type="button">Главная</button>
 </a>
-<a href="/login">
+<a href="/men">
     <button type="button">Мужчинам</button>
 </a>
-<a href="/login">
+<a href="/women">
     <button type="button">Женщинам</button>
 </a>
-<a href="/login">
+<a href="/children">
     <button type="button">Детям</button>
 </a>
-<a href="/login">
+<a href="/winter">
     <button type="button">Зима</button>
 </a>
-<a href="/login">
+<a href="/summer">
     <button type="button">Лето</button>
 </a>
-<a href="/login">
+<a href="/spring">
     <button type="button">Весна/Осень</button>
 </a>
-<a href="/login">
+<a href="/demi">
     <button type="button">Демисезон</button>
 </a>
 <div sec:authorize="!isAuthenticated()">
@@ -47,7 +47,7 @@
     </a>
 </div>
 <br>
-<a href="/search">
+<a href="/searchPage">
     <button type="button">Поиск</button>
 </a>
 <br>
