--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -39,7 +39,7 @@
 </div>
 <div sec:authorize="isAuthenticated()">
     <span sec:authentication="name">Bob</span>
-    <a href="/login">
+    <a href="/account">
         <button type="button">Личный кабинет</button>
     </a>
     <a href="/logout">
