--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
   <meta charset="UTF-8">
   <title>Поиск</title>
 </head>
 <body>
+<a href="/">
+  <button type="button">Главная</button>
+</a>
+<a href="/men">
+  <button type="button">Мужчинам</button>
+</a>
+<a href="/women">
+  <button type="button">Женщинам</button>
+</a>
+<a href="/children">
+  <button type="button">Детям</button>
+</a>
+<a href="/winter">
+  <button type="button">Зима</button>
+</a>
+<a href="/summer">
+  <button type="button">Лето</button>
+</a>
+<a href="/spring">
+  <button type="button">Весна/Осень</button>
+</a>
+<a href="/demi">
+  <button type="button">Демисезон</button>
+</a>
+<div sec:authorize="!isAuthenticated()">
+  <a href="/login">
+    <button type="button">Войти</button>
+  </a>
+  <a href="/registration">
+    <button type="button">Регистрация</button>
+  </a>
+</div>
+<div sec:authorize="isAuthenticated()">
+  <span sec:authentication="name">Bob</span>
+  <a href="/account">
+    <button type="button">Личный кабинет</button>
+  </a>
+  <a href="/logout">
+    <button type="button">Выйти</button>
+  </a>
+</div>
 <form action="#" th:action="@{/search}" method="post" th:object="${searchCriteria}">
   <fieldset>
     <legend>Пожалуйста, введите параметры поиска</legend>
