--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -42,7 +42,7 @@
         <button type="button">Корзина</button>
     </a>
   <span sec:authentication="name">Bob</span>
-  <a href="/account">
+  <a href="/client/account">
     <button type="button">Личный кабинет</button>
   </a>
   <a href="/logout">
