--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -39,7 +39,7 @@
 </div>
 <div sec:authorize="isAuthenticated()">
   <span sec:authentication="name">Bob</span>
-  <a href="/account">
+  <a href="/client/account">
     <button type="button">Личный кабинет</button>
   </a>
   <a href="/logout">
