реализовал изменение персональных данных и пароля

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -58,6 +58,9 @@
   <button type="button">Изменить данные</button>
 </a>
 <br>
+<a href="/client/change-password">
+  <button type="button">Изменить пароль</button>
+</a>
 <br>
 <a href="/client/orders">
   <button type="button">Мои заказы</button>
