--- a/src/main/resources/templates/admin-clients.html
+++ b/src/main/resources/templates/admin-clients.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Список клиентов</title>
+    <link th:href="@{/styles/cssandjs/style.css}" rel="stylesheet" />
 </head>
 <body>
 <a href="/admin/">
@@ -19,9 +20,12 @@
         <td th:text="${client.getUsername()}"></td>
         <td th:text="${client.getIsActive() == true ? 'Активный' : 'Заблокирован'}"></td>
         <td>
-            <a th:href="'/admin/orders/' + ${client.getUsername()}">
-                <button type="button">Заказы</button>
-            </a>
+            <form action="#" th:action="@{/admin/orders}" method="post" th:object="${searchUserOrders}">
+                <input type="hidden" th:value="${client.username}" id="username" name="username">
+                <div class="form-actions">
+                    <button type="submit" class="btn">Заказы</button>
+                </div>
+            </form>
             <a th:if="${client.getIsActive() == true}" th:href="'/admin/block/' + ${client.getUsername()}">
                 <button type="button">Заблокировать</button>
             </a>
