добавлена страница пользователя на стороне админа

--- a/src/main/resources/templates/admin-clients.html
+++ b/src/main/resources/templates/admin-clients.html
@@ -17,7 +17,11 @@
         <th>Имя пользователя</th>
     </tr>
     <tr th:each="client : ${clients}">
-        <td th:text="${client.getUsername()}"></td>
+        <td>
+            <a th:href="'/admin/client/' + ${client.getUsername()}">
+                <b th:text="${client.getUsername()}"></b>
+            </a>
+        </td>
         <td th:text="${client.getIsActive() == true ? 'Активный' : 'Заблокирован'}"></td>
         <td>
             <form action="#" th:action="@{/admin/orders}" method="post" th:object="${searchUserOrders}">
