--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Обувь</title>
+    <link th:href="@{/styles/cssandjs/style.css}" rel="stylesheet" />
 </head>
 <body>
 <a href="/">
