--- a/src/main/resources/templates/model-info.html
+++ b/src/main/resources/templates/model-info.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>MainPage</title>
+  <link th:href="@{/styles/cssandjs/style.css}" rel="stylesheet" />
 </head>
 <body>
 <a href="/">
